--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Install Pandoc
+      run: sudo apt-get install pandoc
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
