--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install Pandoc
-      run: sudo apt-get install pandoc
+      run: sudo apt-get install pandoc && sudo apt-get install texlive-latex-extra && sudo apt install texlive-latex-recommended
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
