--- a/PandocGui.CliWrapper/PandocGui.CliWrapper.csproj
+++ b/PandocGui.CliWrapper/PandocGui.CliWrapper.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="9.5.3" />
+    </ItemGroup>
+
 </Project>
