--- a/PandocGui/PandocGui.csproj
+++ b/PandocGui/PandocGui.csproj
@@ -13,6 +13,10 @@
         <PackageReference Include="Avalonia.Desktop" Version="0.10.0" />
         <PackageReference Include="Avalonia.Diagnostics" Version="0.10.0" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0" />
+        <PackageReference Include="Deadpikle.AvaloniaProgressRing" Version="0.9.0" />
         <PackageReference Include="ReactiveUI.Fody" Version="13.2.10" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\PandocGui.CliWrapper\PandocGui.CliWrapper.csproj" />
     </ItemGroup>
 </Project>
