--- a/.github/workflows/cd-windows.yml
+++ b/.github/workflows/cd-windows.yml
@@ -31,4 +31,5 @@ jobs:
       run: dotnet test --no-build --verbosity normal
     - name: Build Executable
       run: cd PandocGui && dotnet publish --output "c:/temp/pandocgui" --runtime win-x64 --configuration Release -p:PublishSingleFile=true --self-contained true
-    - 
+    - name: Compile Installer
+      run: iscc "isntaller.iss"
