--- a/.github/workflows/cd-windows.yml
+++ b/.github/workflows/cd-windows.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Clean dependancies
-      run: dotnet clean && dotnet nuget locals all --clear
+      run: dotnet clean && dotnet nuget locals all --clear && dotnet nuget add source https://api.nuget.org/v3/index.json -n nuget.org --configfile $env:APPDATA\NuGet\NuGet.Config
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
