--- a/.github/workflows/cd-windows.yml
+++ b/.github/workflows/cd-windows.yml
@@ -15,10 +15,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install Pandoc
       run: choco install pandoc -y
-    - name: Install Pandoc
+    - name: Install Miktex
       run: choco install miktex -y
     - name: Install InnoSetup
       run: choco install InnoSetup -y
+    - name: Check PDF Latex
+      run: pdflatex -version
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
