--- a/.github/workflows/cd-windows.yml
+++ b/.github/workflows/cd-windows.yml
@@ -13,8 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Install Pandoc, Miktex and InnoSetup
+    - name: Install Pandoc, Miktex
       run: choco install pandoc miktex -y
+    - name: Update PATH
+      run: ls "C:\Program Files\MiKTeX\miktex\bin\x64" && "C:\Program Files\MiKTeX\miktex\bin\x64" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
     - name: Check PATH
       run: $env:path
     - name: Check PDF Latex
