--- a/PandocGui/PandocGui.csproj
+++ b/PandocGui/PandocGui.csproj
@@ -3,6 +3,7 @@
         <OutputType>WinExe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
         <Nullable>enable</Nullable>
+        <ApplicationIcon>Assets/avalonia-logo.ico</ApplicationIcon>
     </PropertyGroup>
     <ItemGroup>
         <Folder Include="Models\" />
