--- a/PandocGui.CliWrapper/PandocGui.CliWrapper.csproj
+++ b/PandocGui.CliWrapper/PandocGui.CliWrapper.csproj
@@ -6,6 +6,8 @@
 
     <ItemGroup>
       <PackageReference Include="FluentValidation" Version="9.5.3" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
