--- a/PandocGui.CliWrapper/PandocGui.CliWrapper.csproj
+++ b/PandocGui.CliWrapper/PandocGui.CliWrapper.csproj
@@ -6,8 +6,9 @@
 
     <ItemGroup>
       <PackageReference Include="FluentValidation" Version="9.5.3" />
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+      <PackageReference Include="Serilog" Version="2.10.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+      <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     </ItemGroup>
 
 </Project>
