--- a/PandocGui/PandocGui.csproj
+++ b/PandocGui/PandocGui.csproj
@@ -15,10 +15,10 @@
         <PackageReference Include="Avalonia.Diagnostics" Version="0.10.0" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0" />
         <PackageReference Include="Deadpikle.AvaloniaProgressRing" Version="0.9.0" />
-        <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-        <PackageReference Include="NReco.Logging.File" Version="1.1.1" />
         <PackageReference Include="ReactiveUI.Fody" Version="13.2.10" />
+        <PackageReference Include="Serilog" Version="2.10.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+        <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\PandocGui.CliWrapper\PandocGui.CliWrapper.csproj" />
