--- a/PandocGui.CliWrapper/PandocGui.CliWrapper.csproj
+++ b/PandocGui.CliWrapper/PandocGui.CliWrapper.csproj
@@ -1,14 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
+        <LangVersion>10</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="FluentValidation" Version="10.3.6" />
-      <PackageReference Include="Serilog" Version="2.11.0-dev-01377" />
-      <PackageReference Include="Serilog.Sinks.Console" Version="4.0.2-dev-00890" />
-      <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947" />
+        <PackageReference Include="FluentValidation" Version="10.3.6"/>
+        <PackageReference Include="Serilog" Version="2.11.0-dev-01377"/>
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.2-dev-00890"/>
+        <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947"/>
     </ItemGroup>
 
 </Project>
