--- a/PandocGui.Tests/PandocGui.Tests.csproj
+++ b/PandocGui.Tests/PandocGui.Tests.csproj
@@ -1,17 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
-
+        <TargetFramework>net6.0</TargetFramework>
+        <LangVersion>10</LangVersion>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0-preview-20211130-02" />
-        <PackageReference Include="Serilog" Version="2.11.0-dev-01377" />
-        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.2-dev-00890" />
-        <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947" />
-        <PackageReference Include="xunit" Version="2.4.2-pre.12" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0-preview-20211130-02"/>
+        <PackageReference Include="Serilog" Version="2.11.0-dev-01377"/>
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.2-dev-00890"/>
+        <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947"/>
+        <PackageReference Include="xunit" Version="2.4.2-pre.12"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
@@ -19,7 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\PandocGui.CliWrapper\PandocGui.CliWrapper.csproj" />
+        <ProjectReference Include="..\PandocGui.CliWrapper\PandocGui.CliWrapper.csproj"/>
     </ItemGroup>
 
 </Project>
