--- a/.github/workflows/cicd-linux.yml
+++ b/.github/workflows/cicd-linux.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install dotnet-deb
-      run: dotnet tool install --global dotnet-deb && cd src/PandocGui && dotnet deb install
+      run: dotnet tool install --global dotnet-deb && export PATH="$PATH:/root/.dotnet/tools" && cd src/PandocGui && dotnet deb install
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
