--- a/.github/workflows/cicd-linux.yml
+++ b/.github/workflows/cicd-linux.yml
@@ -17,10 +17,12 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
-    - name: Build Executable
-      run: cd src/PandocGui && dotnet publish -c Release --runtime linux-x64 -p:PublishSingleFile=true --self-contained --output ./dist/linux-x64
-    - name: Save executable as Artifact
+    - name: Install dotnet deb
+      run: dotnet tool install --global dotnet-deb && cd src/PandocGui && dotnet deb install
+    - name: Build deb package
+      run: cd src/PandocGui && dotnet deb -c Release -f net6.0 -o dist/linux-x64
+    - name: Save deb package as artifact
       uses: actions/upload-artifact@v2
       with:
-        name: pandoc-gui-executable
+        name: pandoc-gui
         path: src/PandocGui/dist/linux-x64/
