--- a/.github/workflows/cicd-linux.yml
+++ b/.github/workflows/cicd-linux.yml
@@ -25,7 +25,8 @@ jobs:
         dotnet deb install
     - name: Build deb package
       run: |
-        cd src/PandocGui 
+        cd src/PandocGui
+        export PATH="$PATH:/github/home/.dotnet/tools"
         dotnet deb -c Release -f net6.0 -o dist/linux-x64
     - name: Save deb package as artifact
       uses: actions/upload-artifact@v2
