--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,6 +19,7 @@ jobs:
         run: dotnet test --no-build --verbosity normal
   build-linux-deb:
     name: Build, Test and compile executable on Linux
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/dotnet/sdk:6.0
@@ -44,6 +45,7 @@ jobs:
 
   build-windows-installer:
     name: Build, Test and publish executable on windows
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: windows-latest
     needs: [build-and-test]
     steps:
@@ -62,6 +64,7 @@ jobs:
     name: Create a release for with artifacts
     needs: [build-and-test,build-linux-deb,build-windows-installer]
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/download-artifact@v3
         with:
